Remove non-ASCII

--- a/singlephasedet.tex
+++ b/singlephasedet.tex
@@ -6,7 +6,7 @@ The far detector for the DUNE collaboration will be a series of four liquid argo
 The design for the first 10~kt detector is a submerged wire plane-based TPC with electronic readout also in the liquid argon.  Designs of this style are referred to as single-phase detectors as the charge generation, drift, and detection all occurs in the liquid argon phase.  This style TPC features no charge amplification before collection, thereby making a very precise charge measurement possible. 
 
 
-To achieve DUNE’s goals, a detector is needed that is much larger than ICARUS, the largest LAr TPC detector built to date. The former long-baseline neutrino experiment (LBNE) developed a scalable far detector design shown in Fig.~\ref{fig:fardet-overview} that would scale-up LAr TPC technology by roughly a factor of 40 compared to the ICARUS T600 detector. To achieve this scale-up, a number of novel design elements need to be employed. A membrane cryostat typical for the liquefied natural gas industry will be used instead of a conventional evacuated cryostat.  The wire planes or anode plane assemblies (APAs) will be factory-built as planar modules that are then installed into the cryostat. The modular nature of the APAs allow the size of the detector to be scaled up to at least 40 kt fiducial mass. Both the analog and digital electronics will be mounted on the wire planes inside the cryostat in order to reduce the electronic noise, to avoid transporting analog signals large distances, and to reduce the number of cables that penetrate the cryostat. 
+To achieve DUNE's goals, a detector is needed that is much larger than ICARUS, the largest LAr TPC detector built to date. The former long-baseline neutrino experiment (LBNE) developed a scalable far detector design shown in Fig.~\ref{fig:fardet-overview} that would scale-up LAr TPC technology by roughly a factor of 40 compared to the ICARUS T600 detector. To achieve this scale-up, a number of novel design elements need to be employed. A membrane cryostat typical for the liquefied natural gas industry will be used instead of a conventional evacuated cryostat.  The wire planes or anode plane assemblies (APAs) will be factory-built as planar modules that are then installed into the cryostat. The modular nature of the APAs allow the size of the detector to be scaled up to at least 40 kt fiducial mass. Both the analog and digital electronics will be mounted on the wire planes inside the cryostat in order to reduce the electronic noise, to avoid transporting analog signals large distances, and to reduce the number of cables that penetrate the cryostat. 
 
 The scintillation photon detectors will employ light collection paddles to reduce the required photo-cathode area and thereby cost.  Designs being considered are also more compact than the photomuliplier tubes solution used elsewhere.
 
