--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -49,15 +49,24 @@ Ratios show the distortion on the $\nu_e$ and $\overline{\nu}_e$ spectra due to 
 \end{figure}
 
 
- Fig.~\ref{fig:global_escale_sens} taken from Ref.~\cite{dunecdr} shows the effect of 
-three values of neutrino energy scale uncertainty on the DUNE 
+ Fig.~\ref{fig:global_escale_sens} taken from Ref.~\cite{dunecdr} demonstrates that
+energy scale uncertainties will affect DUNE 
+%shows the effect of 
+%three values of neutrino energy scale uncertainty on the DUNE 
 mass hierarchy and $\delta_{CP}$ sensitivities.
-The nominal sensitivity assumes a 230-kt-MW-year 
-exposure with equal neutrino and antineutrino running. 
+The exposure to achieve this level of sensitivity corresponds to 
+%The nominal sensitivity assumes a
+ 230-400 kt-MW-years for mass hierarchy and  850-1320 kt-MW-years for CPV depending on the 
+details of the LBNF neutrino beam design.
+%exposure with equal neutrino and antineutrino running. 
 Work to evaluate the effect of all systematic uncertainties in DUNE sensitivities is still in progress. 
-The size of effects shown here do not account for correlated uncertainties in neutrino and 
-antineutrino running or effects on backgrounds and is therefore likely
-a best-case scenario. 
+This example assumes only a linear neutrino energy scale variation and does not consider more
+complex (and more likely) scenarios or include correlations and background effects. 
+It therefore likely underestimates the probable effects  of particle energy reconstruction 
+on DUNE sensitivities.
+%The size of effects shown here do not account for correlated uncertainties in neutrino and 
+%antineutrino running or effects on backgrounds and is therefore likely
+%a best-case scenario. 
 \begin{figure}[h!]
 \centering
 \includegraphics[width=0.49\textwidth,height=6.7cm]{figures/mh_230ktmwyear_varyesyst}
