Addressed some of Dan's commennts

--- a/introduction.tex
+++ b/introduction.tex
@@ -82,15 +82,15 @@ More specifically, the goals of the prototype detector and beam test measurement
 \begin{enumerate}
 \item measure the detector calorimetric response for
 \begin{enumerate}
-	\item hadronic showers
+	\item hadronic particles
 	\item electromagnetic showers
 \end{enumerate}
 \item study e/$\gamma$-separation capabilities
-\item measure event reconstruction efficiencies as a function of energy and particle type based on experimental data
+\item measure event reconstruction efficiencies as a function of energy and particle type
 \item measure performance of particle identification algorithms as function of energy and for realistic detector conditions
 \item assess single particle track calibration and reconstruction
 %		-- characterize performance of algorithms
-\item validate accuracy of Monte Carlo simulations for relevant energy ranges as well as directions
+\item validate accuracy of Monte Carlo simulations for relevant energy ranges as well as directions with respect to the wire-plane geometry
 
 %  \item secondary hadron interactions in detector
 \item study other topics with the collected data sets
