added R&D improved figures

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -329,8 +329,8 @@ studied separately.
   \centering
 %\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pi+pi-_means}
 %\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pi+pi-_sig}
-\includegraphics[width=0.49\textwidth,height=6.0cm]{figures/pipimean}
-\includegraphics[width=0.49\textwidth,height=6.0cm]{figures/pipisigma}
+\includegraphics[width=0.49\textwidth,height=6.0cm]{figures/pipimean_ticks1}
+\includegraphics[width=0.49\textwidth,height=6.0cm]{figures/pipisigma_ticks1}
   \caption{Differences in mean energy deposited (left) and width of visible energy (right) 
 for interacting $\pi^+$ versus $\pi^-$ ranging from 0.2~GeV/c up to 5~GeV/c. 
 }
@@ -469,8 +469,8 @@ perform tests of PID algorithms and Bethe-Bloch calibration measurements.
 %mis-ID probabilities. 
 \begin{figure}[h!]
   \centering
-\includegraphics[width=0.53\textwidth,height=6.0cm]{figures/pids}
-\includegraphics[width=0.46\textwidth,height=6.0cm]{figures/prkpimu}
+\includegraphics[width=0.53\textwidth,height=6.0cm]{figures/pids_new}
+\includegraphics[width=0.46\textwidth,height=6.0cm]{figures/prkpimu_new}
 %\includegraphics[width=\textwidth,height=5.0cm]{figures/pid_curves}
   \caption{(left) ICARUS simulated track dQ/dx as a function of residual range for muons, pions, protons and kaons, used as training data in a neutral-net-based PID algorithm. (right) Distribution of dQ/dx for each particle type for a bin with residual range 
 6($\pm$1)~cm. The small difference between muon and pion PID is illustrated.
